@@ -1,4 +1,7 @@
 
+2009-04-12  2:14 Ali aliov@xfce.org 
+	 * : Added debug macro for enum values+fix possible missing signal that preventing the OSD from getting displayed on brightness key press
+
 2009-04-11 23:06 Ali aliov@xfce.org 
 	 * : Implement option to put the system in sleep mode when it is inactive for a long time
 
